--- a/.github/workflows/5.deploy.yaml
+++ b/.github/workflows/5.deploy.yaml
@@ -85,21 +85,16 @@ jobs:
               DEPLOY_ENV="development";
               DEPLOY_URL="https://farmer.storefrontcloud.io/instance/developer-beta-europe-west1-gcp-storefrontcloud-io";
           fi
-          echo "::set-output name=deploy-env::$DEPLOY_ENV";
-          echo "::set-output name=deploy-url::$DEPLOY_URL";
+          echo "DEPLOY_ENV=${DEPLOY_ENV}" >> $GITHUB_ENV
+          echo "DEPLOY_URL=${DEPLOY_URL}" >> $GITHUB_ENV
 
       - name: TEST VARS
         shell: bash
-        env:
-          DEPLOY_URL: ${{ steps.prepare-envs.outputs.deploy-url }}
-          DEPLOY_ENV: ${{ steps.prepare-envs.outputs.deploy-env }}
         run: |
           echo "Deploying to: $DEPLOY_URL"  | sed 's/./& /g'
           echo "Deploying to: $DEPLOY_ENV"  | sed 's/./& /g'
           echo $DEPLOY_URL  | sed 's/./& /g'
           echo $DEPLOY_ENV  | sed 's/./& /g'
-          echo ${{ steps.prepare-envs.outputs.deploy-url }}  | sed 's/./& /g'
-          echo ${{ steps.prepare-envs.outputs.deploy-env }}  | sed 's/./& /g'
           exit 0
 
 #      # Start deployment status
