--- a/.github/workflows/7.deploy-development.yaml
+++ b/.github/workflows/7.deploy-development.yaml
@@ -1,9 +1,9 @@
-name: Deploy - Production
+name: Deploy - Development
 
 on:
   push:
     branches:
-      - main
+      - development
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
@@ -15,10 +15,10 @@ permissions:
 
 jobs:
   build:
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/development'
     runs-on: ubuntu-latest
     env:
-      DEPLOY_ENV: "production"
+      DEPLOY_ENV: "development"
     steps:
       # Checkout the Repository
       - name: Checkout code
@@ -56,12 +56,12 @@ jobs:
           SLACK_COLOR: ${{ job.status }}
 
   deploy:
-    if: github.ref == 'refs/heads/main'
+    if: github.ref == 'refs/heads/development'
     runs-on: ubuntu-latest
     needs: build
     env:
-      DEPLOY_URL: "https://developer.europe-west1.gcp.storefrontcloud.io"
-      DEPLOY_ENV: "production"
+      DEPLOY_URL: "https://developer-beta.europe-west1.gcp.storefrontcloud.io"
+      DEPLOY_ENV: "development"
     steps:
       # Start deployment status
       - name: Create GitHub deployment
@@ -93,7 +93,7 @@ jobs:
       - name: Deploy to VSF Cloud
         shell: bash
         run: |
-          OUTPUT=$(curl -s -H 'X-User-Id: ${{ secrets.CLOUD_USERNAME }}'  -H 'X-Api-Key: ${{ secrets.CLOUD_PASSWORD }}' -H 'Content-Type: application/json' -X PATCH -d '{"front_version":"${{ github.sha }}"}' https://farmer.storefrontcloud.io/instance/developer-europe-west1-gcp-storefrontcloud-io)
+          OUTPUT=$(curl -s -H 'X-User-Id: ${{ secrets.CLOUD_USERNAME }}'  -H 'X-Api-Key: ${{ secrets.CLOUD_PASSWORD }}' -H 'Content-Type: application/json' -X PATCH -d '{"front_version":"${{ github.sha }}"}' https://farmer.storefrontcloud.io/instance/developer-beta-europe-west1-gcp-storefrontcloud-io)
           if echo $OUTPUT | grep -q '"code":200,'; then
             echo "Instance updated"
           else
