--- a/.vuestorefrontcloud/docker/Dockerfile
+++ b/.vuestorefrontcloud/docker/Dockerfile
@@ -2,14 +2,14 @@ FROM node:lts as builder
 
 ARG ALGOLIA_TOKEN
 ARG ALGOLIA_ID
-ARG GITHUB_TOKEN
-ARG DEV_TO_TOKEN
+ARG GITHUB_API_TOKEN
+ARG DEVTO_API_TOKEN
 ARG GOOGLE_TAG_ID
 
 ENV ALGOLIA_TOKEN=$ALGOLIA_TOKEN
 ENV ALGOLIA_ID=$ALGOLIA_ID
-ENV GITHUB_TOKEN=$GITHUB_TOKEN
-ENV DEV_TO_TOKEN=$DEV_TO_TOKEN
+ENV GITHUB_API_TOKEN=$GITHUB_API_TOKEN
+ENV DEVTO_API_TOKEN=$DEVTO_API_TOKEN
 ENV GOOGLE_TAG_ID=$GOOGLE_TAG_ID
 ENV CI=true
 
@@ -28,14 +28,14 @@ FROM node:lts
 
 ARG ALGOLIA_TOKEN
 ARG ALGOLIA_ID
-ARG GITHUB_TOKEN
-ARG DEV_TO_TOKEN
+ARG GITHUB_API_TOKEN
+ARG DEVTO_API_TOKEN
 ARG GOOGLE_TAG_ID
 
 ENV ALGOLIA_TOKEN=$ALGOLIA_TOKEN
 ENV ALGOLIA_ID=$ALGOLIA_ID
-ENV GITHUB_TOKEN=$GITHUB_TOKEN
-ENV DEV_TO_TOKEN=$DEV_TO_TOKEN
+ENV GITHUB_API_TOKEN=$GITHUB_API_TOKEN
+ENV DEVTO_API_TOKEN=$DEVTO_API_TOKEN
 ENV GOOGLE_TAG_ID=$GOOGLE_TAG_ID
 ENV NODE_ENV=production
 
