--- a/.github/workflows/5.deploybot-deploy.yaml
+++ b/.github/workflows/5.deploybot-deploy.yaml
@@ -30,8 +30,8 @@ jobs:
 
       ALGOLIA_ID: ${{secrets.ALGOLIA_ID}}
       ALGOLIA_TOKEN: ${{secrets.ALGOLIA_TOKEN}}
-      DEV_TO_TOKEN: ${{secrets.DEV_TO_TOKEN}}
-      GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+      DEVTO_API_TOKEN: ${{secrets.DEVTO_API_TOKEN}}
+      GITHUB_API_TOKEN: ${{secrets.GITHUB_API_TOKEN}}
       GOOGLE_TAG_ID: ${{secrets.GOOGLE_TAG_ID}}
 
       SLACK_FOOTER: ${{secrets.SLACK_FOOTER}}
