--- a/.github/workflows/deploy-template.yaml
+++ b/.github/workflows/deploy-template.yaml
@@ -107,7 +107,7 @@ jobs:
           GITHUB_API_TOKEN: ${{ secrets.BUILD_GITHUB_API_TOKEN }}
           GOOGLE_TAG_ID: ${{ secrets.GOOGLE_TAG_ID }}
         with:
-          name: developer-storefrontcloud-io/vue-storefront:${{ inputs.SHA }
+          name: developer-storefrontcloud-io/vue-storefront:${{ inputs.SHA }}
           registry: registry.vuestorefront.cloud
           username: ${{ secrets.CLOUD_USERNAME }}
           password: ${{ secrets.CLOUD_PASSWORD }}
