--- a/.github/workflows/2.conventional-pr-name.yml
+++ b/.github/workflows/2.conventional-pr-name.yml
@@ -1,12 +1,14 @@
 name: Commitlint PR Title
-on:
+'on':
   pull_request:
-    types: ['opened', 'edited', 'reopened', 'synchronize']
-
+    types:
+      - opened
+      - edited
+      - reopened
+      - synchronize
 concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  group: '${{ github.workflow }}-${{ github.head_ref || github.run_id }}'
   cancel-in-progress: true
-
 jobs:
   lint:
     name: Validate PR Title (conventional-commit)
