--- a/.github/workflows/4.test.yml
+++ b/.github/workflows/4.test.yml
@@ -1,45 +1,38 @@
 name: Runs ESLint & Tests
-
-on:
+'on':
   pull_request:
-    types: [ opened, ready_for_review, edited, synchronize ]
-
+    types:
+      - opened
+      - ready_for_review
+      - edited
+      - synchronize
 concurrency:
-  group: ${{ github.workflow }}-${{ github.head_ref || github.run_id }}
+  group: '${{ github.workflow }}-${{ github.head_ref || github.run_id }}'
   cancel-in-progress: true
-
 jobs:
   lint:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
       - name: Set node Version
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
           cache: npm
-
       - name: Install Modules
         run: npm i
-
       - name: Run ESLint
         run: npm run lint
-
   test:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
-
       - name: Set node Version
         uses: actions/setup-node@v3
         with:
           node-version: 16.x
           cache: npm
-
       - name: Install Modules
         run: npm i
-
       - name: Run Vitest
         run: npm run test
-
