--- a/.github/workflows/2.conventional-pr-name.yml
+++ b/.github/workflows/2.conventional-pr-name.yml
@@ -7,7 +7,7 @@ name: Commitlint PR Title
       - reopened
       - synchronize
 concurrency:
-  group: '${{ github.workflow }}-${{ github.head_ref || github.run_id }}'
+  group: 'prname-${{ github.workflow }}-${{ github.head_ref || github.run_id }}-${{ github.ref }}'
   cancel-in-progress: true
 jobs:
   lint:
