refactor: added auto deploy

--- a/.github/workflows/5.deploybot-deploy.yaml
+++ b/.github/workflows/5.deploybot-deploy.yaml
@@ -1,9 +1,6 @@
 name: Auto Deployment
 'on':
-  push:
-    branches:
-      - main
-  workflow_dispatch: null
+  deployment:
 permissions:
   contents: read
   deployments: write
